<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/bg"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/your_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAdd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/quantico_bold_italic"
                    android:maxLines="1"
                    android:paddingHorizontal="8dp"
                    android:textColor="@color/fore" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/scrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:scrollbarSize="0dp"
            app:layout_constraintTop_toBottomOf="@id/temp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/des"
                    android:onClick="avr"
                    android:src="@drawable/avtar_1"
                    android:tag="1" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/des"
                    android:onClick="avr"
                    android:src="@drawable/avtar_2"
                    android:tag="2" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/des"
                    android:onClick="avr"
                    android:src="@drawable/avtar_3"
                    android:tag="3" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/des"
                    android:onClick="avr"
                    android:src="@drawable/avtar_4"
                    android:tag="4" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/des"
                    android:onClick="avr"
                    android:src="@drawable/avtar_5"
                    android:tag="5" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/des"
                    android:onClick="avr"
                    android:src="@drawable/avtar_6"
                    android:tag="6" />
            </LinearLayout>
        </HorizontalScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/r_f_bg"
            android:fontFamily="@font/quantico_bold_italic"
            android:paddingHorizontal="24dp"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrl" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@id/btSave" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>