<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/bg"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/co_main"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btRec"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/des"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintWidth_percent=".1"
            app:srcCompat="@drawable/recp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="22dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/des"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logoname"
            app:tint="@color/gray_bg" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/r_f_bg"
        android:backgroundTint="@color/gary_fg"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="@id/topBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <ImageView
            android:id="@+id/btApp"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/des"
            android:padding="8dp"
            app:srcCompat="@drawable/appout"
            app:tint="@color/gray_bg" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/r_f_bg" />

        <ImageView
            android:id="@+id/btGal"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/des"
            android:padding="8dp"
            app:srcCompat="@drawable/galout"
            app:tint="@color/gray_bg" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/r_f_bg" />

        <ImageView
            android:id="@+id/btFile"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/des"
            android:padding="8dp"
            app:srcCompat="@drawable/filefil"
            app:tint="@color/gray_bg" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_apps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/bt_send"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_gal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/bt_send"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_files"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/bt_send"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_send"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/r_f_bg"
        android:fontFamily="@font/quantico_bold_italic"
        android:maxWidth="320dp"
        android:text="@string/send"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent=".64" />

    <TextView
        android:id="@+id/tvItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/r_f_bg"
        android:fontFamily="@font/quantico_bold_italic"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/bt_send"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@id/bt_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bt_send" />

    <ImageView
        android:id="@+id/imgTransfer"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:contentDescription="@string/des"
        android:elevation="12dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>